--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,7 @@
-API_ID=
-API_HASH=
-BOT_TOKEN=
-MONGO_DB_URI=
-LOG_GROUP_ID=
-OWNER_ID=
-STRING_SESSION=
+API_ID = 25609334
+API_HASH = ad0ff353206ea1ebce1ab8bfca9f3f7b
+BOT_TOKEN = 7532425557:AAGv6DCIjPoX0xiWMwCs6ybCJBBqE0x1NzY
+MONGO_DB_URI = mongodb+srv://bsdk:betichod@cluster0.fgj1r9z.mongodb.net/?retryWrites=true&w=majority
+LOG_GROUP_ID = -1001947334164
+OWNER_ID = 7281046601
+STRING_SESSION = BQGt9tsAlUezTyE3NXPzgyhZ58zkS8IcG2bdCq2IM43OBYqIWQe2FvASn0w-spivpvcLyjvxFhKQWdCL_gcK_XTu_41izKR21kd48DpRKt36AaHdxdf1RB6P54MhVWNMCaGvAwqdU9UMajcdl-j95zPZ42gOvaehq-MEI-1gUeKcd_fpSis5IO4MiPsJpQTtdphra9SDVqd1afc5fneiczrIQ3MHX21EZVT3-HEc2o0NumIpYjuTKmaVGTShMPtRaJHkos-f3mudmUQTvD8xmqCrrctYJglEQr3zxektJ0DYYcjfj_wNYwP_CmgQuMO98010gbbSmOF1WxKZMpCly0teia2YBwAAAAFC8M17AA
